ext/phalcon/mvc/model/query/scanner.c
/* Generated by re2c 0.13.5 on Tue Oct 14 08:42:27 2014 */
// 1 "scanner.re"

/*
  +------------------------------------------------------------------------+
  | Phalcon Framework                                                      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2014 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>                      |
  |          Eduar Carvajal <eduar@phalconphp.com>                         |
  +------------------------------------------------------------------------+
*/

#ifdef HAVE_CONFIG_H
#include "config.h"
#endif

#include "php.h"
#include "php_phalcon.h"

#include "scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int phql_get_token(phql_scanner_state *s, phql_scanner_token *token) {

	char *q = YYCURSOR;
	int status = PHQL_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHQL_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
// 45 "scanner.c"
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy68;
			case '\t':
			case '\n':
			case '\r':
			case ' ':	goto yy66;
			case '!':	goto yy50;
			case '"':	goto yy29;
			case '%':	goto yy42;
			case '&':	goto yy62;
			case '\'':	goto yy30;
			case '(':	goto yy46;
			case ')':	goto yy48;
			case '*':	goto yy38;
			case '+':	goto yy34;
			case ',':	goto yy44;
			case '-':	goto yy36;
			case '.':	goto yy4;
			case '/':	goto yy40;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy2;
			case ':':	goto yy8;
			case '<':	goto yy52;
			case '=':	goto yy56;
			case '>':	goto yy54;
			case '?':	goto yy6;
			case 'A':
			case 'a':	goto yy15;
			case 'B':
			case 'b':	goto yy20;
			case 'C':
			case 'c':	goto yy27;
			case 'D':
			case 'd':	goto yy13;
			case 'E':
			case 'K':
			case 'M':
			case 'P':
			case 'Q':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'e':
			case 'k':
			case 'm':
			case 'p':
			case 'q':
			case 'x':
			case 'y':
			case 'z':	goto yy32;
			case 'F':
			case 'f':	goto yy14;
			case 'G':
			case 'g':	goto yy21;
			case 'H':
			case 'h':	goto yy22;
			case 'I':
			case 'i':	goto yy16;
			case 'J':
			case 'j':	goto yy25;
			case 'L':
			case 'l':	goto yy23;
			case 'N':
			case 'n':	goto yy24;
			case 'O':
			case 'o':	goto yy19;
			case 'R':
			case 'r':	goto yy26;
			case 'S':
			case 's':	goto yy12;
			case 'T':
			case 't':	goto yy28;
			case 'U':
			case 'u':	goto yy10;
			case 'V':
			case 'v':	goto yy17;
			case 'W':
			case 'w':	goto yy18;
			case '[':	goto yy33;
			case '\\':	goto yy31;
			case '^':	goto yy60;
			case '|':	goto yy64;
			case '~':	goto yy58;
			default:	goto yy70;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '.':	goto yy288;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy290;
			default:	goto yy3;
			}
yy3:
// 46 "scanner.re"
			{
			token->opcode = PHQL_T_INTEGER;
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			q = YYCURSOR;
			return 0;
		}
// 170 "scanner.c"
yy4:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy285;
			default:	goto yy5;
			}
yy5:
// 353 "scanner.re"
			{
			token->opcode = PHQL_T_DOT;
			return 0;
		}
// 192 "scanner.c"
yy6:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy282;
			default:	goto yy7;
			}
yy7:
// 448 "scanner.re"
			{
			status = PHQL_SCANNER_RETCODE_ERR;
			break;
		}
// 214 "scanner.c"
yy8:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '-':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy278;
			default:	goto yy9;
			}
yy9:
// 358 "scanner.re"
			{
			token->opcode = PHQL_T_COLON;
			return 0;
		}
// 291 "scanner.c"
yy10:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'P':
			case 'p':	goto yy267;
			case 'S':
			case 's':	goto yy268;
			default:	goto yy87;
			}
yy11:
// 301 "scanner.re"
			{
			token->opcode = PHQL_T_IDENTIFIER;
			if ((YYCURSOR - q) > 1) {
				if (q[0] == '\\') {
					token->value = estrndup(q + 1, YYCURSOR - q - 1);
					token->len = YYCURSOR - q - 1;
				} else {
					token->value = estrndup(q, YYCURSOR - q);
					token->len = YYCURSOR - q;
				}
			} else {
				token->value = estrndup(q, YYCURSOR - q);
				token->len = YYCURSOR - q;
			}
			q = YYCURSOR;
			return 0;
		}
// 320 "scanner.c"
yy12:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy259;
			default:	goto yy87;
			}
yy13:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy242;
			case 'I':
			case 'i':	goto yy243;
			default:	goto yy87;
			}
yy14:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy229;
			case 'R':
			case 'r':	goto yy230;
			case 'U':
			case 'u':	goto yy231;
			default:	goto yy87;
			}
yy15:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'G':
			case 'g':	goto yy215;
			case 'N':
			case 'n':	goto yy216;
			case 'S':
			case 's':	goto yy217;
			default:	goto yy87;
			}
yy16:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy194;
			case 'N':
			case 'n':	goto yy195;
			case 'S':
			case 's':	goto yy197;
			default:	goto yy87;
			}
yy17:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy188;
			default:	goto yy87;
			}
yy18:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'H':
			case 'h':	goto yy183;
			default:	goto yy87;
			}
yy19:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'F':
			case 'f':	goto yy164;
			case 'N':
			case 'n':	goto yy165;
			case 'R':
			case 'r':	goto yy167;
			case 'U':
			case 'u':	goto yy169;
			default:	goto yy87;
			}
yy20:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy155;
			case 'Y':
			case 'y':	goto yy156;
			default:	goto yy87;
			}
yy21:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy150;
			default:	goto yy87;
			}
yy22:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy144;
			default:	goto yy87;
			}
yy23:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy132;
			case 'I':
			case 'i':	goto yy133;
			default:	goto yy87;
			}
yy24:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy125;
			case 'U':
			case 'u':	goto yy126;
			default:	goto yy87;
			}
yy25:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy121;
			default:	goto yy87;
			}
yy26:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy116;
			default:	goto yy87;
			}
yy27:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy100;
			case 'O':
			case 'o':	goto yy101;
			case 'R':
			case 'r':	goto yy102;
			default:	goto yy87;
			}
yy28:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy96;
			default:	goto yy87;
			}
yy29:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy7;
			goto yy94;
yy30:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy7;
			goto yy89;
yy31:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy86;
			default:	goto yy7;
			}
yy32:
			yych = *++YYCURSOR;
			goto yy87;
yy33:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy81;
			default:	goto yy7;
			}
yy34:
			++YYCURSOR;
// 328 "scanner.re"
			{
			token->opcode = PHQL_T_ADD;
			return 0;
		}
// 608 "scanner.c"
yy36:
			++YYCURSOR;
// 333 "scanner.re"
			{
			token->opcode = PHQL_T_SUB;
			return 0;
		}
// 616 "scanner.c"
yy38:
			++YYCURSOR;
// 338 "scanner.re"
			{
			token->opcode = PHQL_T_MUL;
			return 0;
		}
// 624 "scanner.c"
yy40:
			++YYCURSOR;
// 343 "scanner.re"
			{
			token->opcode = PHQL_T_DIV;
			return 0;
		}
// 632 "scanner.c"
yy42:
			++YYCURSOR;
// 348 "scanner.re"
			{
			token->opcode = PHQL_T_MOD;
			return 0;
		}
// 640 "scanner.c"
yy44:
			++YYCURSOR;
// 363 "scanner.re"
			{
			token->opcode = PHQL_T_COMMA;
			return 0;
		}
// 648 "scanner.c"
yy46:
			++YYCURSOR;
// 368 "scanner.re"
			{
			token->opcode = PHQL_T_PARENTHESES_OPEN;
			return 0;
		}
// 656 "scanner.c"
yy48:
			++YYCURSOR;
// 373 "scanner.re"
			{
			token->opcode = PHQL_T_PARENTHESES_CLOSE;
			return 0;
		}
// 664 "scanner.c"
yy50:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy79;
			default:	goto yy51;
			}
yy51:
// 413 "scanner.re"
			{
			token->opcode = PHQL_T_NOT;
			return 0;
		}
// 677 "scanner.c"
yy52:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy75;
			case '>':	goto yy77;
			default:	goto yy53;
			}
yy53:
// 398 "scanner.re"
			{
			token->opcode = PHQL_T_LESS;
			return 0;
		}
// 691 "scanner.c"
yy54:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy73;
			default:	goto yy55;
			}
yy55:
// 403 "scanner.re"
			{
			token->opcode = PHQL_T_GREATER;
			return 0;
		}
// 704 "scanner.c"
yy56:
			++YYCURSOR;
// 408 "scanner.re"
			{
			token->opcode = PHQL_T_EQUALS;
			return 0;
		}
// 712 "scanner.c"
yy58:
			++YYCURSOR;
// 418 "scanner.re"
			{
			token->opcode = PHQL_T_BITWISE_NOT;
			return 0;
		}
// 720 "scanner.c"
yy60:
			++YYCURSOR;
// 423 "scanner.re"
			{
			token->opcode = PHQL_T_BITWISE_XOR;
			return 0;
		}
// 728 "scanner.c"
yy62:
			++YYCURSOR;
// 428 "scanner.re"
			{
			token->opcode = PHQL_T_BITWISE_AND;
			return 0;
		}
// 736 "scanner.c"
yy64:
			++YYCURSOR;
// 433 "scanner.re"
			{
			token->opcode = PHQL_T_BITWISE_OR;
			return 0;
		}
// 744 "scanner.c"
yy66:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy72;
yy67:
// 438 "scanner.re"
			{
			token->opcode = PHQL_T_IGNORE;
			return 0;
		}
// 755 "scanner.c"
yy68:
			++YYCURSOR;
// 443 "scanner.re"
			{
			status = PHQL_SCANNER_RETCODE_EOF;
			break;
		}
// 763 "scanner.c"
yy70:
			yych = *++YYCURSOR;
			goto yy7;
yy71:
			++YYCURSOR;
			yych = *YYCURSOR;
yy72:
			switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':	goto yy71;
			default:	goto yy67;
			}
yy73:
			++YYCURSOR;
// 393 "scanner.re"
			{
			token->opcode = PHQL_T_GREATEREQUAL;
			return 0;
		}
// 785 "scanner.c"
yy75:
			++YYCURSOR;
// 388 "scanner.re"
			{
			token->opcode = PHQL_T_LESSEQUAL;
			return 0;
		}
// 793 "scanner.c"
yy77:
			++YYCURSOR;
// 383 "scanner.re"
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
// 801 "scanner.c"
yy79:
			++YYCURSOR;
// 378 "scanner.re"
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
// 809 "scanner.c"
yy81:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy81;
			case ']':	goto yy84;
			default:	goto yy83;
			}
yy83:
			YYCURSOR = YYMARKER;
			switch (yyaccept) {
			case 0: 	goto yy9;
			case 1: 	goto yy7;
			}
yy84:
			++YYCURSOR;
// 320 "scanner.re"
			{
			token->opcode = PHQL_T_IDENTIFIER;
			token->value = estrndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			q = YYCURSOR;
			return 0;
		}
// 897 "scanner.c"
yy86:
			++YYCURSOR;
			yych = *YYCURSOR;
yy87:
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
